--- a/timetrak/app/assets/stylesheets/theme.css.scss
+++ b/timetrak/app/assets/stylesheets/theme.css.scss
@@ -5,6 +5,10 @@ html, body {
     overflow: hidden;
 }/*force no horizontal scroll*/
 
+table{
+  border-collapse: collapse;
+}
+
 a, a:visited{
 	color: inherit;
 	text-decoration: none;
