--- a/timetrak/app/views/welcome/index.html.erb
+++ b/timetrak/app/views/welcome/index.html.erb
@@ -12,7 +12,7 @@
 		    <div class="menutitle">Timetrak <sub>Scheduler</sub></div>
 		  </div>
 		  <div class="menucontainer" style="margin-right: 2em;">
-		    <%= link_to "SIGN IN", accounts_path(@accounts, action: "new"), class: "menuitem" %>
+		    <%= link_to "LOGIN", login_path, class: "menuitem" %>
 		  </div>
 		  <div class="menucontainer">
 		    <%= link_to "ABOUT", welcome_path(@welcome, anchor: "about"), class: "menuitem" %>
