--- a/timetrak/app/views/accounts/new.html.erb
+++ b/timetrak/app/views/accounts/new.html.erb
@@ -17,8 +17,8 @@
 					<%= form_for @account do |a| %>
 	          <tr><th>Username:</th><td><%= a.text_field :username %></td></tr>
 						<tr><th>Password:</th><td><%= a.password_field :password %></td></tr>
-						<tr><th>Confirm Password:</th><td><%= a.password_field :password_confirmation %>_msg
-						<tr><th>Email:</th><td><%= a.text_field :email %><	/td></tr>
+						<tr><th>Confirm Password:</th><td><%= a.password_field :password_confirmation %>
+						<tr><th>Email:</th><td><%= a.text_field :email %></td></tr>
 	          <tr><td><%= a.submit "Create Account"%></td></tr>
 					<% end %>
 				</table>
