--- a/timetrak/app/views/calendar/show.html.erb
+++ b/timetrak/app/views/calendar/show.html.erb
@@ -11,11 +11,11 @@
 		<div class="maincontainer">
 			<div class="subcontainer">
         <div class="month">
-          <%= link_to account_calendar_path(date: @date - 1.month), class: "calendar_selector" do %>
+          <%= link_to calendar_path(date: @date - 1.month), class: "calendar_selector" do %>
           	<<
 					<% end %>
           <%= "#{@date.strftime("%B")} #{@date.year}"%>
-          <%= link_to account_calendar_path(date: @date + 1.month), class: "calendar_selector" do %>
+          <%= link_to calendar_path(date: @date + 1.month), class: "calendar_selector" do %>
           	>>
 					<% end %>
         </div>
