--- a/timetrak/app/views/layouts/_header.html.erb
+++ b/timetrak/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
     <div class="menutitle">Timetrak <sub>Scheduler</sub></div>
   </div>
   <div class="menucontainer" style="margin-right: 2em;">
-    <a class="menuitem" >LOGOUT</a>
+    <%= link_to "LOGOUT", logout_path, class: "menuitem", method: :delete %>
   </div>
   <div class="menucontainer">
-    <%= link_to "MY ACCOUNT", account_path(@account), class: "menuitem" %>
+    <%= link_to "MY ACCOUNT", account_path(session[:account_id]), class: "menuitem" %>
   </div>
   <div class="menucontainer">
     <%= link_to "CALENDAR", calendar_path, class: "menuitem" %>
