--- a/timetrak/app/assets/stylesheets/theme.css.scss
+++ b/timetrak/app/assets/stylesheets/theme.css.scss
@@ -9,6 +9,8 @@ table{
   border-collapse: collapse;
 }
 
+*{font-family: 'District', Tahoma, Geneva, sans-serif;}
+
 a, a:visited{
 	color: inherit;
 	text-decoration: none;
@@ -18,7 +20,6 @@ a, a:visited{
 #menu_button{
 	border-style: none;
 	color: inherit;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: 1vw;
 	width: auto;
 	padding: 0.25vw;
@@ -74,7 +75,6 @@ a, a:visited{
 	width: auto;
 
 	text-align: center;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: .9vw;
 	color: #A6A6A6;
 
@@ -103,7 +103,6 @@ a, a:visited{
 	width: auto;
 
 	text-align: center;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: .9vw;
 	color: #A6A6A6;
 
@@ -142,7 +141,6 @@ div.menutitle{
 
 	vertical-align: middle;
 	text-align: center;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: 25px;
 	padding-left: 2em;
 	padding-right: 0.5em;
@@ -175,7 +173,6 @@ div.menutitle{
     visibility: hidden;
 	text-align: center;
 	color: white;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: 14px;
 
 }
@@ -188,7 +185,6 @@ div.menutitle{
 	line-height: 40px;
 	text-align: center;
 	font-size: 14px;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	color: #333333;
 	padding-left: 0.5em;
 	padding-right: 0.5em;
@@ -223,7 +219,6 @@ div.bannercontent{
 	vertical-align: middle;
 	text-align: center;
 	font-size: 16px;
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	color: white;
 	padding: 0.25em;
 
@@ -255,7 +250,6 @@ div.subcontainer{
 .floatcontainer{
 	visibility: hidden;
 
-	font-family: 'District', Tahoma, Geneva, sans-serif;
 	font-size: 1.25vw;
 	text-align: center;
 	padding: 0.25vw;
@@ -294,7 +288,6 @@ div.subcontainer{
 
   background: #E4E4E4;
 
-  font-family: 'District', Tahoma, Geneva, sans-serif;
   font-size: 20px;
   text-align: center;
 
@@ -308,7 +301,6 @@ div.subcontainer{
   border-collapse: collapse;
   border: 1px solid #DBDBDB;
 
-  font-family: 'District', Tahoma, Geneva, sans-serif;
   font-size: 18px;
   padding-left: 10px;
 
@@ -318,7 +310,6 @@ div.subcontainer{
 }
 
 .month{
-  font-family: 'District', Tahoma, Geneva, sans-serif;
   font-size: 50px;
 }
 
@@ -328,7 +319,6 @@ div.subcontainer{
 
   background: #F4F4F4;
 
-  font-family: 'District', Tahoma, Geneva, sans-serif;
   font-size: 18px;
   padding-left: 10px;
 
@@ -343,7 +333,6 @@ div.subcontainer{
 
   background: #FFFFB2;
 
-  font-family: 'District', Tahoma, Geneva, sans-serif;
   font-size: 18px;
   padding-left: 10px;
 
