--- a/timetrak/app/views/accounts/show.html.erb
+++ b/timetrak/app/views/accounts/show.html.erb
@@ -1,6 +1,7 @@
 <body>
 		<%= render 'layouts/header' %>
 		<div class="maincontainer">
+			<%= flash[:success] %>
 			<div class="subcontainer">
 				My Account:
         <table class="calendar">
