--- a/timetrak/app/views/accounts/new.html.erb
+++ b/timetrak/app/views/accounts/new.html.erb
@@ -2,15 +2,22 @@
 		<%= render 'layouts/header' %>
 		<div class="maincontainer">
 			<%= render 'layouts/error_msgs' %>
-			<%= flash[:success] %>
 			<div class="subcontainer">
 				Create An Account:
         <table id="account_info">
 					<%= form_for @account do |a| %>
-	          <tr><th>Username:</th><td><%= a.text_field :username %></td></tr>
-						<tr><th>Password:</th><td><%= a.password_field :password %></td></tr>
-						<tr><th>Confirm Password:</th><td><%= a.password_field :password_confirmation %>
-						<tr><th>Email:</th><td><%= a.text_field :email %></td></tr>
+	          <tr><%= a.label :username do %>
+							<%= a.text_field :username %>
+						<% end %></tr>
+						<tr><%= a.label :password do %>
+							<%= a.password_field :password %>
+						<% end %></tr>
+						<tr><%= a.label :password_confirmation do %>
+							<%= a.password_field :password_confirmation %>
+						<% end %></tr>
+						<tr><%= a.label :email do %>
+							<%= a.text_field :email %>
+						<% end %></tr>
 	          <tr><td><%= a.submit "Create Account"%></td></tr>
 					<% end %>
 				</table>
