--- a/timetrak/app/views/layouts/_header.html.erb
+++ b/timetrak/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <div class="menublock">
   <% if logged_in? %>
   <div class="menutitlecontainer">
-    <%= link_to account_path(session[:account_id]) do %>
+    <%= link_to calendar_path do %>
       <div class="menutitle">Timetrak<sub>Scheduler</sub></div>
     <% end %>
   </div>
@@ -9,7 +9,7 @@
     <%= link_to "LOGOUT", logout_path, class: "menuitem", method: :delete %>
   </div>
   <div class="menucontainer">
-    <%= link_to "MY ACCOUNT", account_path(session[:account_id]), class: "menuitem" %>
+    <%= link_to @current_account.username.upcase ,account_path(session[:account_id]), class: "menuitem" %>
   </div>
   <div class="menucontainer">
     <%= link_to "CALENDAR", calendar_path, class: "menuitem" %>
