--- a/timetrak/app/views/accounts/new.html.erb
+++ b/timetrak/app/views/accounts/new.html.erb
@@ -13,7 +13,7 @@
 						<tr><td>Confirm Password</td>
 							<td><%= a.password_field :password_confirmation %></td></tr>
 						<tr><td><%= a.label :email%></td>
-							<td><%= a.text_field :email %></td></tr>
+							<td><%= a.email_field :email %></td></tr>
 	          <tr><td><%= a.submit "Create Account"%></td></tr>
 				</table>
 				<% end %>
