--- a/timetrak/app/assets/stylesheets/theme.css.scss
+++ b/timetrak/app/assets/stylesheets/theme.css.scss
@@ -1,9 +1,23 @@
 html, body {
     max-width: 100%;
+    height: 100%;
+    width: 100%;
 	  margin: 0px;
 	  padding: 0px;
     overflow: hidden;
 }/*force no horizontal scroll*/
+
+.mask{
+  position: fixed;
+
+  display: block;
+  background: rgba(0,0,0,0.7);
+
+  z-index: 99;
+
+  height: 100%;
+  width: 100%;
+}
 
 table{
   border-collapse: collapse;
@@ -16,27 +30,50 @@ a, a:visited{
 	text-decoration: none;
 }/*force no decoration*/
 
+.no-resize{
+  width: 100%;
+  resize: none;
+}
+
+.float-form > table > tbody > tr > td > label{
+  float:left;
+  text-align: left;
+  width: 20%;
+  max-width: 120px;
+  min-width: 70px;
+}
+
+.full-form{
+  float: left;
+  width: 100%;
+}
 /*----------------BUTTONS------------------------------*/
-div.close-block{
+.close-block{
   display: inline-block;
   background: white;
 
   float: right;
 
   color: #818181;
-  font-size: 24px;
-  text-align: center;
+  font-size: 20px;
   line-height: 20px;
+  text-align: center;
+
+  padding: 1px;
 
   width: 20px;
+  height: 20px;
 
   border: 1px solid #DBDBDB;
   border-radius: 5px;
 }
-div.close-block:hover{
-  cursor: hand;
+.close-block:hover{
+  color: white;
 
-  background: black;
+  cursor: hand; //IE Support
+  cursor: pointer;
+
+  background: #19A3D1;
 }
 /*----------------Menu related styling-----------------*/
 div.menublock {
@@ -159,32 +196,33 @@ div.maincontainer{
 }
 div.subcontainer{
 	width: auto;
-  height: 70%;
+  height: 80%;
 	overflow: auto;
   padding: 50px 65px 50px 50px
 }
 /*-----------------------OTHER DIVS-----------------------------*/
-.floatcontainer{
-	visibility: hidden;
+.float-form{
+  display: table;
+  position: fixed;
 
-	font-size: 1.25vw;
-	text-align: center;
-	padding: 0.25vw;
+  top: 25%;
+  left: 40%;
 
-	z-index: 1;
-	position: fixed;
-	left: 0;
-	top: 3vw;
-	width: 15vw;
-	height: 97vw;
+  z-index: 100;
 
-	border: 1px solid #E6E6E6;
-	overflow: hidden;
+  background: white;
+  border-radius: 20px;
 
-	background: #222222;
-	color: white;
+  text-align: center;
+  font-size: 24px;
+
+  width: 20%;
+  min-width: 250px;
+  max-width: 500px;
+  padding: 10px;
+
+  font-size: 14px;
 }
-.subform { color: white;}
 /*---------------------CALENDAR-----------------------------*/
 .calendar{
   border-collapse: collapse;
@@ -193,7 +231,7 @@ div.subcontainer{
   float: left;
 
   width: 70%;
-  height: 500px;
+  height: 100%;
 }
 .calendar > tbody > tr{
   background: white;
@@ -228,7 +266,7 @@ div.subcontainer{
 }
 
 .month{
-  font-size: 50px;
+  font-size: 36px;
 }
 
 .not-month {
@@ -237,6 +275,7 @@ div.subcontainer{
 
   background: #F4F4F4;
 
+  color: #818181;
   font-size: 18px;
   padding-left: 10px;
 
@@ -273,6 +312,8 @@ div.subcontainer{
   color: black;
 
   width:  20%;
-  height: 500px;
+  height: auto;
   padding: 12px;
+
+  overflow-y: auto;
 }
