Seasons controller & model
- changes to associations between events, teams, and accounts controller
- need to change views and controller attr acessors

--- a/timetrak/app/views/layouts/_header.html.erb
+++ b/timetrak/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
     <%= link_to @current_account.username.upcase ,account_path(current_account), class: "menuitem" %>
   </div>
   <div class="menucontainer">
-    <%= link_to "CALENDAR", calendar_path, class: "menuitem" %>
+    <%= link_to "MANAGE", account_seasons_path(current_account), class: "menuitem" %>
   </div>
   <% else %>
   <div class="menutitlecontainer">
