--- a/timetrak/app/views/accounts/show.html.erb
+++ b/timetrak/app/views/accounts/show.html.erb
@@ -4,7 +4,7 @@
 			<%= flash[:error] %>
 			<% if logged_in? %>
 			<div class="subcontainer">
-				My Account:
+				<h2>Account Details:</h2>
         <table>
           <tr><th>Username:</th><td><%= @account.username %></td>
           <tr><th>Email:</th><td><%= @account.email %></td>
