--- a/timetrak/app/views/seasons/index.html.erb
+++ b/timetrak/app/views/seasons/index.html.erb
@@ -17,16 +17,25 @@
     <% end %>
   </div>
   <div class="float-form" id="new-team-form">
-    <div class="close-block" id="cancel-season">
+    <div class="close-block" id="cancel-team">
       X
     </div>
-    Create a Season:
+    Add a Team:
     <div id="float-form-table">
-    <%= form_for [@season_nfo, @team] do |f| %>
+    <%= form_for [@current_account, @current_season] do |f| %>
+    <p>
+      <%= f.collection_select(:teams, @teams, :id, :name, {include_blank: "Select a team"}, {class: "large-selector"}) %>
+      <%= f.submit "Add Team", class: "submit-button" %>
+    </p>
+    </div>
+    <% end %>
+    Create a Team:
+    <div id="float-form-table">
+    <%= form_for [@current_account, @team] do |f| %>
     <p>
       <%= f.text_field :name, placeholder: "Enter team name", id: 'float-form-input', class: 'full-form' %>
-      <%= f.text_area :description, placeholder: "Add a desciprtion", rows: 3, id: 'float-form-input', class: 'full-form no-resize'%>
-      <%= f.submit "Add Team", class: "submit-button" %>
+      <%= f.text_area :description, placeholder: "Add a description", rows: 3, id: 'float-form-input', class: 'full-form no-resize' %>
+      <%= f.submit "Create Team", class: "submit-button" %>
     </p>
     </div>
     <% end %>
